cluster/rhbk/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  host: sso.apps.cluster-dpx5t.dyn.redhatworkshops.io
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
