cluster/rhbk/openshift-oauth-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-oauth-keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  host: sso.apps.cluster-spz55.dyn.redhatworkshops.io
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
